# backend-update

./: .env  .gitignore  .telnet.py.swn  Dockerfile  README.md  docker-compose.yml  error.txt  main.py  noc_session.pkl  pyproject.toml  requirements.txt  tele.py  telebot.md  test_ocr.py  test_ocr_rotation.py
api/v1/: api.py
api/v1/endpoints/: __init__.py  bot_api.py  customer_scrapper.py  file_handler.py  ocr.py  onu_handler.py  open_ticket.py  telnet.py
core/: __init__.py  config.py  olt_config.py  switch_config.py
schemas/: bot_api.py  config_handler.py  customers_scrapper.py  onu_handler.py
selenium_artifacts/: login-fail-20260206-160740.html
services/: biling_scaper.py  connection_manager.py  database.py  exceltopostgress.py  generated.py  new_ocr.py  ocr.py  open_ticket.py  page_source.txt  page_source_1.txt  playwright.py  playwright.py.save  sn_extractor.py  supabase_client.py  switch_telnet.py  telnet.py
services/sessions/: session_cs.json  session_noc.json
templates/: config_bridge.yaml  config_c300.yaml  config_c600.yaml
