[project]
name = "backend-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.11.1",
    "beautifulsoup4==4.14.2",
    "bs4>=0.0.2",
    "fastapi[standard]==0.121.0",
    "httpx==0.28.1",
    "jinja2==3.1.5",
    "numpy<2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "pysnmp==7.1.22",
    "python-dotenv==1.2.1",
    "python-multipart>=0.0.21",
    "pyyaml==6.0.1",
    "requests==2.32.5",
    "selenium==4.38.0",
    "starlette==0.40.0",
    "supabase>=2.27.0",
    "telnetlib3==2.0.8",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "webdriver-manager==4.0.2",
    "paddleocr>=2.7.0",
    "Pillow",
    "playwright>=1.57.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
]
